LPD-75173 Use Arrays.asList for OAuth2 provisioning lists